# short-circuit-me

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Makefile  README.md  README2.md  docker-compose.yml  fly.toml  pixi.toml  pyproject.toml  qodana.sarif.json  qodana.yaml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml  test.yaml  test.yml
.run/: backend_Dockerfile.run.xml
assets/: attribution.html  manifest.json  manifest.yml
backend/: .dockerignore  Dockerfile  backend.README.md  backend.Readme.md  fly.toml  pyproject.toml  slackbolt_api.py
fastapi/: Dockerfile  requirements.txt
fastapi/app/: Dockerfile
frontend/: Dockerfile  fly.toml  frontend.Readme.md  login.py  pyproject.toml  start_streamlit.sh
frontend/pages/: 1_app.py
fullstack/: .dockerignore  login.py
scm-poetry/: .dockerignore  Dockerfile  README.md  pyproject.toml  streamlit_app.py
scm-poetry/backend/: Dockerfile  atlas_conn.py  atlas_motor_conn.py  backend.Readme.md  create_db.py  fly.toml  pyproject.toml  slackbolt_api.py  slackbolt_app.py  slackbolt_csv.py  start_bolt.sh
scm-poetry/frontend/: Dockerfile  entrypoint.sh  fly.toml  frontend.Readme.md  login.py  pyproject.toml  start_streamlit.sh  streamlit_app.py  streamlit_csv.py
scm-poetry/frontend/pages/: 1_app.py
scm-poetry/fullstack/: Dockerfile  fly.toml  login.py  mounts.def  pyproject.toml  slackbolt_csv.py  slackbolt_full.py  start.sh  streamlit_app.py
scm-poetry/fullstack/pages/: 1_app.py  1_home.py
scm-poetry/messaging/: myslack.py
scm-poetry/scm_poetry/: slackbolt.py
scm-poetry/tests/: test.py  test_atlas_conn.py
spec/: dev-requirements.in
src/: Dockerfile  pyproject.toml  requirements.txt
src/app/: Dockerfile
src/frontend/: short_circuit_me.py
src/messaging/: manifest.yaml
tests/: test_slackbolt_api.py
