[tool.poetry]
name = "short-circuit-me"
version = "0.1.0"
description = ""
authors = ["John Dutchover <johndutchover@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "short_circuit_me"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

