[tool.poetry]
name = "short-circuit-me"
version = "0.6.1"
description = "short-circuit-me poetry"
authors = ["John Dutchover <1983909-johndutchover@users.noreply.gitlab.com>"]
readme = ["README.md", "backend/backend.README.md"]
packages = [
  { include = "backend" },
]

[tool.poetry.dependencies]

[tool.poetry.group.backend]

[tool.poetry.group.backend.dependencies]
anyio = {version = ">=4.0.0", python=">=3.10"}
fastapi = {version = ">=0.103.0", python=">=3.10"}
slack-bolt = {version = "^1.18.0", python=">=3.10"}
python-dotenv = {version = "^1.0.0", python=">=3.10"}
pydantic = {version = ">=1.8.0", python=">=3.10"}
uvicorn = { version = ">=0.23.0", python=">=3.10"}
requests = { version = ">=2.3.0", python=">=3.10"}
watchdog = { version = "^3.0.0", python = ">=3.10" }
asyncio = "^3.4.3"
numpy = {version = "^1.24.3", python = ">=3.10"}
motor = {version = "^3.1.2", python=">=3.10"}
load-dotenv = "^0.1.0"
dnspython = {version = "^2.3.0", python=">=3.10,<4.0"}
aiohttp = {version = ">=3.8.5", python=">=3.10"}
typing-extensions = {version = ">=4.8.0", python = ">=3.10"}

[tool.poetry.group.dev.dependencies]
typer = { version = "^0.9.0", python = ">=3.10" }
flake8 =  { version = "^6.0.0", python=">=3.10"}
black = { version = "^23.3.0", python=">=3.10"}
pylint =  { version = "^2.17.4", python=">=3.10"}
gitpython = { version = ">=3.1.35", python = ">3.10" }
packaging = { version = ">=22.0", python = "3.10" }

[tool.poetry.group.test.dependencies]
pytest = { version = ">=7.4.4", python = ">=3.10" }

[build-system]
requires = ["poetry-core", "setuptools-scm"]
build-backend = "poetry.core.masonry.api"
