[project]
name = "short-circuit-me"
dynamic = ["version"]
description = "short-circuit-me"
authors = [
  {name = "John Dutchover", email = "1983909-johndutchover@users.noreply.gitlab.com"}
  ]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools]
packages = ["assets", "backend"]
