[tool.poetry]
name = "scm-poetry"
version = "0.2.0"
description = "short-circuit-me poetry"
authors = ["John Dutchover <johndutchover@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "frontend"},
    {include = "backend"},
]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.18.0"
pip-tools = "^6.13.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
typer = "^0.9.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
