[tool.poetry]
name = "backend"
version = "0.1.0"
description = "slack-bolt"
authors = ["John Dutchover <johndutchover@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
slack-bolt = "^1.18.0"
pip-tools = "^6.13.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
