[tool.poetry]
name = "backend"
version = "0.3.1"
description = "short-circuit-me backend"
authors = ["John Dutchover <johndutchover@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
slack-bolt = "^1.18.0"
pip-tools = "^6.13.0"
python-dotenv = "^1.0.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"
requests = "^2.3.0"
asyncio = "^3.4.3"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
typer = "^0.9.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
