[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "streamlit frontend"
authors = ["John Dutchover <johndutchover@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"
requests = "^2.3.0"
streamlit = "~1.22.0"
watchdog = "^3.0.0"
asyncio = "^3.4.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
plotly = "^5.14.1"
slack-bolt = "^1.18.0"
bokeh = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
